# depclean

./: .gitignore  Cargo.toml  Dockerfile  README.md  readme.md
src/: analysis.rs  cli.rs  graph.rs  impact.rs  lib.rs  main.rs  parser.rs  report.rs
tests/: analysis_tests.rs  cargo_parser_tests.rs  impact_tests.rs  integration_tests.rs
