[package]
name = "depclean"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
semver = "1.0"
cargo_metadata = "0.15"
clap = { version = "4.0", features = ["derive"] }
prettytable-rs = "0.10"
rayon = "1.6"   # For potential parallel processing
