[package]
name = "depclean"
version = "0.1.1"
authors = ["Suhas A"]
edition = "2021"
description = "A tool to analyze and optimize project dependencies"
homepage = "https://github.com/suhasamaresh/depclean"
repository = "https://github.com/suhasamaresh/depclean"
license = "MIT OR Apache-2.0"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
semver = "1.0"
cargo_metadata = "0.15"
clap = { version = "4.0", features = ["derive"] }
prettytable-rs = "0.10"
rayon = "1.6"   # For potential parallel processing
assert_cmd = "2.0"
predicates = "2.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

